--- a/index.css
+++ b/index.css
@@ -7,8 +7,6 @@
     display: block;
 }
 
-
-
 @keyframes fadeIn{
     from{
         opacity: 0;
@@ -25,6 +23,37 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    animation: fadeIn 3s linear;
+    animation: fadeIn .5s linear;
+    background-color: rgb(41, 41, 44);
 }
 
+
+.content{
+    position: absolute;
+    top:  200px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+
+.content .js-clock{
+    font-size: 30px;
+}
+.content .greetings{
+    font-size: 30px;
+}
+.content .js-toDoForm input{
+    font-size: 20px;
+}
+.content .js-toDoList li{
+    list-style: none;
+    margin-bottom: 5px;
+    font-size: 20px;
+}
+
+.js-weather{
+    display: block;
+    position: absolute;
+    right: 50px;
+ 
+}
